[project]
name = "programming_concepts"
version = "0.1.0"

[tool.black]
line-length = 120

[tool.pyright]
enableReachabilityAnalysis = false

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
addopts = "-m 'not slow' --cov=src --cov-report=term-missing"
testpaths = "tests"

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.flake8]
max-line-length = 120
